# fp

./: Cargo.toml  README.md
src/: main.rs
src/dict/: xhyx.json
