[package]
name = "fp"
version = "0.1.0"
edition = "2021"
authors = ["Caster <moecasts.caster@gmail.com>"]
description = "小鹤查形工具"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
serde_json = "1.0.85"
